swaggerでbearerトークンが利用できるように修正
